# robohow_sot_demo

./: .travis.yml  CMakeLists.txt  mainpage.dox  package.xml  readme.md  readme.txt
launch/: displayer.launch  dummy_cram.launch  printer.launch  robohow_pr2.launch
launch/python/: hrp4_robohow_startup.py
launch/robots/: hrp4_printer.xml  romeo.xml
python/: romeo_robohow_startup.py
scripts/: hrp4_pouring.py  pr2_pouring.py  romeo_pouring.py
